[gd_scene load_steps=10 format=3 uid="uid://dhd20v1jgopp5"]

[ext_resource type="Script" uid="uid://c4akx874f6f6g" path="res://src/ui/ingame/inventory/inventory_ui.gd" id="1_jrvep"]
[ext_resource type="PackedScene" uid="uid://lgd2g38edtud" path="res://src/ui/component/border_panel_container.tscn" id="2_4htqt"]
[ext_resource type="StyleBox" uid="uid://cpkdte5woiv0y" path="res://theme/dark_bg.tres" id="3_pd273"]
[ext_resource type="PackedScene" uid="uid://d2htlbcx3auv5" path="res://src/ui/component/level_xp_container.tscn" id="4_2dase"]
[ext_resource type="Texture2D" uid="uid://dtayffjjwm2t2" path="res://assets/ui/currency/coin.webp" id="4_xtemm"]
[ext_resource type="StyleBox" uid="uid://dot3ob5w5856b" path="res://theme/secondary_bg.tres" id="5_35s0p"]
[ext_resource type="PackedScene" uid="uid://3yfgh8je56mx" path="res://src/ui/ingame/inventory/value_button.tscn" id="6_6om06"]
[ext_resource type="PackedScene" uid="uid://dbc5n0l2322gd" path="res://src/ui/ingame/component/coin_value_container.tscn" id="6_ikjoo"]
[ext_resource type="PackedScene" uid="uid://c6d4vb0xl3cb" path="res://src/ui/ingame/component/gem_value_container.tscn" id="7_6om06"]

[node name="InventoryUi" type="CanvasLayer"]
script = ExtResource("1_jrvep")
metadata/_custom_type_script = "uid://ccd8amg2hly0y"

[node name="BorderPanelContainer" parent="." instance=ExtResource("2_4htqt")]

[node name="VBoxContainer" type="VBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "inventory"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ArtifactContainer" type="ScrollContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ArtifactContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ArtifactContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ArtifactsFlowContainer" type="HFlowContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ArtifactContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SidePanel" type="PanelContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="SidePanelRoot" type="MarginContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PanelContainer" type="PanelContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_pd273")

[node name="MarginContainer" type="MarginContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ImageRect" type="TextureRect" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="TitleLbl" type="Label" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescLbl" type="Label" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CountLbl" type="Label" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.92549, 0.435294, 0, 1)
text = "1x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelXpContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_2dase")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("4_xtemm")
expand_mode = 2
stretch_mode = 5

[node name="CurrencyLbl" type="Label" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="PanelContainer" type="PanelContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/panel = ExtResource("5_35s0p")

[node name="MarginContainer" type="MarginContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SellOneBtn" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_6om06")]
unique_name_in_owner = true
layout_mode = 2
title = "sell_one"
image = ExtResource("4_xtemm")

[node name="SellAllBtn" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_6om06")]
unique_name_in_owner = true
layout_mode = 2
title = "sell_all"
image = ExtResource("4_xtemm")

[node name="BorderPanelContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_4htqt")]
layout_mode = 2
size_flags_vertical = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer" index="0"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="CoinValueContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2" instance=ExtResource("6_ikjoo")]
layout_mode = 2

[node name="GemValueContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2" instance=ExtResource("7_6om06")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="SellAllArtifactsBtn" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer" instance=ExtResource("6_6om06")]
unique_name_in_owner = true
layout_mode = 2
title = "sell_all_artifacts"
image = ExtResource("4_xtemm")

[node name="BackBtn" type="Button" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "back"

[editable path="BorderPanelContainer"]
[editable path="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BorderPanelContainer"]
